solved register delete and comment

--- a/templates/posts.html
+++ b/templates/posts.html
@@ -38,8 +38,9 @@
         <p><a href="{% url 'feed-edit' post.post_id %}">Edit</a>
            <a href="{% url 'feed-delete' post.post_id %}">Delete</a>
         </p>
-   
+   {% endif %}
     <hr>
+    {% if request.user.is_authenticated%}
     <form method="post" action="{% url 'add-comment' post.post_id %}">
     {% csrf_token %}
     <label for="comment">Add a Comment:</label>
